Created a view programmitcally

--- a/WorldTrotter/WorldTrotter/Base.lproj/Main.storyboard
+++ b/WorldTrotter/WorldTrotter/Base.lproj/Main.storyboard
@@ -89,6 +89,16 @@
             </objects>
             <point key="canvasLocation" x="503" y="449"/>
         </scene>
+        <!--Map-->
+        <scene sceneID="ZFK-dG-GyT">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="edE-KS-u02" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="E2h-ex-8Nl" customClass="MapViewController" customModule="WorldTrotter" customModuleProvider="target" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Map" image="MapIcon" id="uhl-Sx-1xb"/>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="1631" y="448"/>
+        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="cUH-hl-voa">
             <objects>
@@ -100,6 +110,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="FQF-3z-aQS"/>
+                        <segue destination="E2h-ex-8Nl" kind="relationship" relationship="viewControllers" id="ccA-Hc-Tbd"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="c2m-Py-CKu" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -109,5 +120,6 @@
     </scenes>
     <resources>
         <image name="ConvertIcon" width="48.5" height="32.5"/>
+        <image name="MapIcon" width="48.5" height="32.5"/>
     </resources>
 </document>
