--- a/Homepwner/Homepwner/Base.lproj/Main.storyboard
+++ b/Homepwner/Homepwner/Base.lproj/Main.storyboard
@@ -16,9 +16,38 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <view key="tableHeaderView" contentMode="scaleToFill" id="jlh-cS-YTx">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ybF-hC-Ylh">
+                                    <rect key="frame" x="191.5" y="15" width="175.5" height="30"/>
+                                    <state key="normal" title="Add"/>
+                                    <connections>
+                                        <action selector="addNewItem:" destination="C2G-4N-d87" eventType="touchUpInside" id="6Rt-Zi-JPh"/>
+                                    </connections>
+                                </button>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xcY-ff-nOc">
+                                    <rect key="frame" x="8" y="15" width="175.5" height="30"/>
+                                    <state key="normal" title="Edit"/>
+                                    <connections>
+                                        <action selector="toggleEditingMode:" destination="C2G-4N-d87" eventType="touchUpInside" id="kcI-Px-ye5"/>
+                                    </connections>
+                                </button>
+                            </subviews>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstItem="ybF-hC-Ylh" firstAttribute="width" secondItem="xcY-ff-nOc" secondAttribute="width" id="H2H-nA-7Lq"/>
+                                <constraint firstItem="xcY-ff-nOc" firstAttribute="leading" secondItem="jlh-cS-YTx" secondAttribute="leading" constant="8" id="JY0-g7-lax"/>
+                                <constraint firstItem="xcY-ff-nOc" firstAttribute="centerY" secondItem="jlh-cS-YTx" secondAttribute="centerY" id="LeA-FA-PxL"/>
+                                <constraint firstItem="ybF-hC-Ylh" firstAttribute="leading" secondItem="xcY-ff-nOc" secondAttribute="trailing" constant="8" id="Ug0-ef-fcM"/>
+                                <constraint firstAttribute="trailing" secondItem="ybF-hC-Ylh" secondAttribute="trailing" constant="8" id="XYg-Zt-wbb"/>
+                                <constraint firstItem="ybF-hC-Ylh" firstAttribute="centerY" secondItem="jlh-cS-YTx" secondAttribute="centerY" id="xd3-hL-85S"/>
+                            </constraints>
+                        </view>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="UITableViewCell" textLabel="YUM-Td-X11" detailTextLabel="FSD-he-Sc3" style="IBUITableViewCellStyleValue1" id="nuq-Jm-rvc">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <rect key="frame" x="0.0" y="88" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="nuq-Jm-rvc" id="w31-Di-9Xr">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
@@ -50,7 +79,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IhX-Iv-NA9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="62" y="60"/>
+            <point key="canvasLocation" x="61.600000000000001" y="59.820089955022496"/>
         </scene>
     </scenes>
 </document>
